--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "@typescript-eslint/semi": "warn",
     "eqeqeq": "warn",
     "no-throw-literal": "warn",
-    "semi": "off"
+    "semi": "off",
+    "@typescript-eslint/no-unused-vars": "error"
   },
   "ignorePatterns": ["out", "dist", "**/*.d.ts"]
 }
